# Rust-Fullstack-Realtime-Collaboration-App-Backend

./: .env  Cargo.toml  README.md
migrations/2023-04-10-205407_create_users/: up.sql
migrations/2023-04-10-205801_create_projects/: up.sql
migrations/2023-04-10-205834_create_tasks/: up.sql
migrations/2023-04-10-205858_create_messages/: up.sql
migrations/2023-04-11-011205_create_invitations/: up.sql
migrations/2023-04-11-045604_update_users_table/: down.sql  up.sql
src/: main.rs  schema.rs  shema.rs
src/config/: db.rs
src/handlers/: auth.rs  invitations.rs  messages.rs  mod.rs  projects.rs  tasks.rs
src/middleware/: auth_middleware.rs
src/models/: invitation.rs  message.rs  mod.rs  project.rs  task.rs  user.rs
src/routers/: invitation_routers.rs  message_routers.rs  mod.rs  project_routers.rs  task_routers.rs
src/routes/: auth_routes.rs
src/utils/: file_upload.rs  jwt.rs  mod.rs  password.rs
